# capebase

./: README.md  pyproject.toml
cape/: api.py  main.py  models.py  notification.py
cape/auth/: access_control.py  row_level_security.py
cape/core/: notification.py
cape/core/auth/: access_control.py  row_level_security.py
capebase/: api.py  main.py  models.py  notification.py
capebase/auth/: row_level_security.py
examples/todo/: app.py  users.py
pyrestore/core/: notification.py
pyrestore/core/auth/: access_control.py
stubs/casbin/: enforcer.pyi  model.pyi
tests/: test_access_control.py  test_api.py  test_database.py  test_filter_query.py  test_notification.py  test_notification_engine.py  test_rls.py  test_subscribe.py
