[project]
name = "pyrestore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "casbin>=1.37.0",
    "fastapi>=0.115.6",
    "pycasbin>=1.36.3",
    "pydantic>=2.10.4",
    "pytest>=8.3.4",
    "sqlmodel>=0.0.22",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
strict = true

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.2",
    "uvicorn>=0.34.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"